--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "^17.0.2",
         "react-currency-format": "^1.1.0",
         "react-dom": "^17.0.2",
+        "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^4.0.3",
