--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "berry-material-react-ts",
-    "version": "3.1.0",
+    "name": "acc22",
+    "version": "1.0",
     "private": true,
     "dependencies": {
         "@auth0/auth0-spa-js": "^1.19.4",
