--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "1.0",
     "private": true,
     "dependencies": {
-        "@auth0/auth0-spa-js": "^1.19.4",
         "@emotion/cache": "^11.7.1",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
@@ -13,15 +12,11 @@
         "@mui/material": "^5.4.1",
         "@mui/styles": "^5.4.1",
         "@mui/system": "^5.4.1",
-        "@mui/utils": "^5.4.1",
-        "@mui/x-data-grid": "^5.5.0",
         "@reduxjs/toolkit": "^1.7.2",
         "@tabler/icons": "^1.53.0",
         "csstype": "^3.0.10",
-        "firebase": "^9.6.6",
         "framer-motion": "^4.1.13",
         "react": "^17.0.2",
-        "react-currency-format": "^1.1.0",
         "react-dom": "^17.0.2",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.6",
@@ -29,9 +24,7 @@
         "react-scripts": "^4.0.3",
         "redux": "^4.1.2",
         "redux-persist": "^6.0.0",
-        "slick-carousel": "^1.8.1",
-        "typescript": "^4.5.5",
-        "web-vitals": "^2.1.4"
+        "typescript": "^4.5.5"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -64,23 +57,10 @@
     },
     "devDependencies": {
         "@babel/core": "^7.17.2",
-        "@types/chance": "^1.1.3",
-        "@types/draft-js": "^0.11.9",
-        "@types/image-to-base64": "^2.1.0",
-        "@types/jsonwebtoken": "^8.5.8",
         "@types/react": "^17.0.39",
-        "@types/react-beautiful-dnd": "^13.1.2",
-        "@types/react-copy-to-clipboard": "^5.0.2",
-        "@types/react-currency-format": "^1.0.0",
         "@types/react-dom": "^17.0.11",
-        "@types/react-draft-wysiwyg": "^1.13.4",
-        "@types/react-google-recaptcha": "^2.1.3",
         "@types/react-redux": "^7.1.22",
         "@types/react-router-dom": "^5.3.3",
-        "@types/react-slick": "^0.23.8",
-        "@types/react-syntax-highlighter": "^13.5.2",
-        "@types/react-window": "^1.8.5",
-        "@types/uuid": "^8.3.4",
         "@types/webpack-env": "^1.16.3",
         "@typescript-eslint/eslint-plugin": "4.4.1",
         "@typescript-eslint/parser": "^4.24.0",
@@ -89,14 +69,8 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-config-react-app": "6.0.0",
         "eslint-import-resolver-typescript": "^2.5.0",
-        "eslint-plugin-flowtype": "^5.7.2",
-        "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-react": "^7.28.0",
-        "eslint-plugin-react-hooks": "^4.3.0",
         "prettier": "^2.5.1",
-        "react-error-overlay": "6.0.9",
         "sass": "^1.49.7"
     }
 }
